# cairn-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  CHANGELOG.md  CUT_PLAN.md  Dockerfile  README.md  ROADMAP.md  architecture.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  refactor.md  run_bench.py  server.json  server.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  publish.yml
cairn/: __init__.py  __main__.py  api.py  chat_tools.py  config.py  server.py  session.py
cairn-ui/: Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
cairn-ui/src/: middleware.ts
cairn-ui/src/app/: globals.css  layout.tsx  page.tsx
cairn-ui/src/components/: app-shell.tsx  auth-guard.tsx  auth-provider.tsx  breadcrumbs.tsx  command-palette.tsx  doc-type-badge.tsx  download-menu.tsx  empty-state.tsx  error-boundary.tsx  error-state.tsx  importance-badge.tsx  memory-sheet.tsx  memory-type-badge.tsx  notification-bell.tsx  page-filters.tsx  page-layout.tsx  paginated-list.tsx  pagination.tsx  project-pill.tsx  project-selector.tsx  rule-sheet.tsx  sidebar-nav.tsx  skeleton-list.tsx  system-pulse.tsx  tag-list.tsx  task-sheet.tsx  theme-provider.tsx  time-range-filter.tsx
cairn-ui/src/hooks/: use-graph-data.ts  use-metrics-stream.tsx  use-sse.ts
cairn-ui/src/lib/: api.ts  auth.ts  chat-adapter.ts  chat-utils.ts  dashboard-registry.ts  download.ts  format.ts  nav.ts  use-dashboard-layout.ts  use-fetch.ts  use-keyboard-nav.ts  use-local-storage.ts  use-memory-sheet.ts  use-page-filters.ts  use-project-selector.ts
cairn/api/: __init__.py  agents.py  alerting.py  analytics.py  attachments.py  audit.py  auth_routes.py  beliefs.py  chat.py  code.py  conversations.py  core.py  deliverables.py  deprecated.py  dispatch.py  events.py  export.py  graph_edit.py  ingest.py  knowledge.py  messages.py  metrics_stream.py  rate_limit.py  retention.py  search.py  sessions.py  subscriptions.py  tasks.py  terminal.py  thinking.py  utils.py  webhooks.py  work_items.py  working_memory.py  workspace.py
cairn/code/: __init__.py  __main__.py  arch_rules.py  bridge.py  imports.py  indexer.py  parser.py  query.py  summarizer.py  utils.py  watcher.py  worker.py
cairn/code/languages/: __init__.py  bash.py  c.py  cpp.py  csharp.py  css.py  dockerfile.py  go.py  groovy.py  hcl.py  html.py  java.py  json.py  kotlin.py  lua.py  makefile.py  markdown.py  matlab.py  objc.py  ocaml.py  php.py  python.py  ruby.py  rust.py  scala.py  sql.py  swift.py  toml.py  typescript.py  yaml.py  zig.py
cairn/core/: activation.py  affinity.py  agent_dashboard.py  agent_memory.py  agents.py  alert_worker.py  alerting.py  analytics.py  antipatterns.py  audit.py  auth.py  beliefs.py  budget.py  cairns.py  clustering.py  code_ops.py  consolidation.py  constants.py  conversations.py  decay.py  deliverables.py  digest.py  drift.py  enrichment.py  event_bus.py  event_dispatcher.py  event_schema.py  extraction.py  extraction_prompt.py  graph_repair.py  handlers.py  ingest.py  mca.py  memory.py  messages.py  metrics_collector.py  oauth2_server.py  oidc.py  orient.py  otel.py  (+26 more)
cairn/core/reranker/: __init__.py  bedrock.py  interface.py  local.py
cairn/embedding/: __init__.py  bedrock.py  engine.py  interface.py  openai_compat.py
cairn/graph/: __init__.py  config.py  interface.py  neo4j_provider.py
cairn/integrations/: agent_sdk.py  claude_code.py  interface.py  opencode.py
cairn/listeners/: __init__.py  agent_listener.py  audit_listener.py  code_index_listener.py  deliverable_listener.py  graph_projection.py  memory_access.py  memory_enrichment.py  notification_listener.py  push_notifier.py  review_listener.py  session_synthesis.py  webhook_listener.py
cairn/llm/: __init__.py  bedrock.py  gemini.py  interface.py  ollama.py  openai_compat.py  prompts.py  router.py
cairn/scripts/: dedup_entities.py  export_keepers.py  import_keepers.py
cairn/storage/: database.py  settings_store.py
cairn/storage/migrations/: 001_initial.sql  002_clustering.sql  003_thinking.sql  004_cairns.sql  005_partial_indexes.sql  006_session_events.sql  (+48 more)
cairn/tools/: __init__.py  agents.py  auth.py  deliverables.py  insights.py  locks.py  memory.py  project.py  session.py  threading.py  work_items.py
docs/: authentication.md  backup.md  remote-mcp.md
eval/: __init__.py  __main__.py  corpus.py  corpus_export.py  enrichment_eval.py  failure_analysis.py  metrics.py  model_compare.py  queries.py  report.py  runner.py  search_eval.py  trace_question.py  utils.py
eval/benchmark/: __init__.py  base.py  judge.py  qa_metrics.py  rag.py  report_bench.py  runner_bench.py
eval/data/: enrichment_ground_truth.json  queries.json
examples/homepage/: services.yaml
examples/hooks/: README.md  log-event.sh  session-end.sh  session-start.sh
examples/workspace/: README.md
scripts/: backfill_entities.py  backfill_knowledge_graph.py  backup.sh  benchmark_charts.py  build_graph_edges.py  bulk_ops.py  deploy.sh  migrate_recallium.py  migrate_v2.py  re_enrich.py  reembed.py  release.sh  restore.sh  setup-auth.sh  setup-env.sh  setup-hooks.sh  setup-lib.sh  setup.sh  smoke-test.sh
tests/: conftest.py  helpers.py  test_activation.py  test_affinity.py  test_agent_dashboard.py  test_agent_memory.py  test_agent_sdk_backend.py  test_agents.py  test_alerting.py  test_analytics.py  test_antipatterns.py  test_arch_rules.py  test_architecture.py  test_audit.py  test_auth.py  test_bash_parser.py  test_bedrock_embedding.py  test_budget.py  test_c_parser.py  test_cairns.py  test_clustering.py  test_code_bridge.py  test_code_cross_project.py  test_code_indexer.py  test_code_parser.py  test_code_query.py  test_code_summarizer.py  test_concurrent_stress.py  test_confidence_gating.py  test_config_coverage.py  test_consolidation.py  test_contradiction_escalation.py  test_cpp_parser.py  test_csharp_parser.py  test_css_parser.py  test_decay.py  test_decay_worker.py  test_decomposition.py  test_deliberation.py  test_deliverable_listener.py  (+84 more)
(+116 files in other folders)
