[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-mcp"
version = "0.18.1"
description = "Persistent memory for agents and humans. Store, search, and discover patterns across persistent context."
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Jason Dostal"}
]
keywords = ["mcp", "semantic-memory", "ai", "vector-search", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "boto3>=1.34",
    "scikit-learn>=1.3",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "chonkie",
    "trafilatura>=2.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/jasondostal/cairn-mcp"
Repository = "https://github.com/jasondostal/cairn-mcp"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
