[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-mcp"
version = "0.69.0"
description = "Persistent memory for agents and humans. Store, search, and discover patterns across persistent context."
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Jason Dostal"}
]
keywords = ["mcp", "semantic-memory", "ai", "vector-search", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "boto3>=1.34",
    "scikit-learn>=1.3",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "chonkie",
    "trafilatura>=2.0",
    "neo4j>=5.0",
    "pyjwt[cryptography]>=2.8",
    "bcrypt>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-json>=0.23",
    "tree-sitter-yaml>=0.6",
    "tree-sitter-bash>=0.23",
    "tree-sitter-sql>=0.3",
    "tree-sitter-markdown>=0.3",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-scala>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-hcl>=1.0",
    "tree-sitter-toml>=0.6",
    "tree-sitter-dockerfile>=0.2",
    "tree-sitter-html>=0.23",
    "tree-sitter-css>=0.25",
    "tree-sitter-lua>=0.4",
    "tree-sitter-groovy>=0.1",
    "tree-sitter-make>=1.1",
    "tree-sitter-objc>=3.0",
    "tree-sitter-zig>=1.1",
    "tree-sitter-ocaml>=0.24",
    "tree-sitter-matlab>=1.3",
    "pathspec>=0.12",
    "markdown>=3.5",
    "weasyprint>=68",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1"]
terminal = ["asyncssh>=2.14", "cryptography>=41.0"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/jasondostal/cairn-mcp"
Repository = "https://github.com/jasondostal/cairn-mcp"

[tool.setuptools.packages.find]
include = ["cairn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
