[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-mcp"
version = "0.77.1"
description = "Persistent memory for agents and humans. Store, search, and discover patterns across persistent context."
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Jason Dostal"}
]
keywords = ["mcp", "semantic-memory", "ai", "vector-search", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "boto3>=1.34",
    "scikit-learn>=1.3",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "chonkie",
    "trafilatura>=2.0",
    "neo4j>=5.0",
    "pyjwt[cryptography]>=2.8",
    "bcrypt>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "watchdog>=4.0",
    "markdown>=3.5",
    "weasyprint>=68",
]

[project.optional-dependencies]
code = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-json>=0.23",
    "tree-sitter-yaml>=0.6",
    "tree-sitter-bash>=0.23",
    "tree-sitter-sql>=0.3",
    "tree-sitter-markdown>=0.3",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-scala>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-hcl>=1.0",
    "tree-sitter-toml>=0.6",
    "tree-sitter-dockerfile>=0.2",
    "tree-sitter-html>=0.23",
    "tree-sitter-css>=0.25",
    "tree-sitter-lua>=0.4",
    "tree-sitter-groovy>=0.1",
    "tree-sitter-make>=1.1",
    "tree-sitter-objc>=3.0",
    "tree-sitter-zig>=1.1",
    "tree-sitter-ocaml>=0.24",
    "tree-sitter-matlab>=1.3",
]
ollama = ["ollama>=0.1"]
terminal = ["asyncssh>=2.14", "cryptography>=41.0"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/jasondostal/cairn-mcp"
Repository = "https://github.com/jasondostal/cairn-mcp"

[tool.setuptools.packages.find]
include = ["cairn*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "S"]
ignore = [
    "E402",   # module-level import ordering (intentional delayed imports)
    "E501",   # line length (not enforced)
    "E741",   # ambiguous variable name (`l` in comprehensions)
    "B008",   # function-call-in-default-arg (FastAPI Query() pattern)
    "S101",   # assert usage (fine in non-web code)
    "S105",   # hardcoded password (false positives on config defaults)
    "S106",   # hardcoded password in func arg (same)
    "S108",   # /tmp usage (acceptable in container)
    "S110",   # try-except-pass (intentional in many places)
    "S310",   # suspicious URL open (validated before use)
    "S603",   # subprocess call (not user-facing)
    "S607",   # partial executable path (not user-facing)
    "S104",   # bind-all-interfaces (intentional in container)
    "S608",   # hardcoded SQL (raw SQL by design, not ORM)
]

[tool.ruff.lint.per-file-ignores]
"cairn/core/services.py" = ["F821"]         # forward-reference strings in dataclass
"cairn/core/subscriptions.py" = ["F821"]    # forward-reference string
"tests/*" = ["S", "B"]                      # security/bugbear relaxed in tests

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[pydantic-mypy]
init_forbid_extra = false
init_typed = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
